--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,13 +23,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="OrdServicoes">Ordem de Serviços</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="OrdServicoes" asp-action="Index">Ordem de Serviços</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="OrdRecebimentoes">Ordem de Recebimento</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="OrdRecebimentoes" asp-action="Index">Ordem de Recebimento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ItnServRecs">Itens de Serviços e Recebimento</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ItnServRecs" asp-action="Index">Itens de Serviços e Recebimento</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contato</a>
