Bo e View Update

--- a/Views/ItnServRecs/Edit.cshtml
+++ b/Views/ItnServRecs/Edit.cshtml
@@ -35,12 +35,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="DataDeCriacao" class="control-label"></label>
-                <input asp-for="DataDeCriacao" class="form-control" />
+                <input asp-for="DataDeCriacao" class="form-control" disabled />
                 <span asp-validation-for="DataDeCriacao" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UltimaModificacao" class="control-label"></label>
-                <input asp-for="UltimaModificacao" class="form-control" />
+                <input asp-for="UltimaModificacao" class="form-control" disabled />
                 <span asp-validation-for="UltimaModificacao" class="text-danger"></span>
             </div>
             <div class="form-group">
