View Update, Melhor mapeamento

--- a/Views/ItnServRecs/Details.cshtml
+++ b/Views/ItnServRecs/Details.cshtml
@@ -10,6 +10,12 @@
     <h4>ItnServRec</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dt class="col-sm-10">
+            @Html.DisplayFor(model => model.Id)
+        </dt>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdOrdRec)
         </dt>
