--- a/Views/ItnServRecs/Edit.cshtml
+++ b/Views/ItnServRecs/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>ItnServRec</h4>
+<h4>ItnServRec <input asp-for="Id" disabled /></h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
