--- a/Views/OrdRecebimentoes/Delete.cshtml
+++ b/Views/OrdRecebimentoes/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>OrdRecebimento</h4>
+    <h4>OrdRecebimento @Html.DisplayFor(model => model.Id)</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
