--- a/Views/OrdRecebimentoes/Details.cshtml
+++ b/Views/OrdRecebimentoes/Details.cshtml
@@ -10,6 +10,12 @@
     <h4>OrdRecebimento</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dt class="col-sm-10">
+            @Html.DisplayFor(model => model.Id)
+        </dt>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NumeroNf)
         </dt>
