View Update, Melhor mapeamento 2

--- a/Views/OrdRecebimentoes/Edit.cshtml
+++ b/Views/OrdRecebimentoes/Edit.cshtml
@@ -20,7 +20,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
+                <select asp-for="Status" class="form-control">
+                    <option value="Aberto">Aberto</option>
+                    <option value="Em andamento">Em andamento</option>
+                    <option value="Fechado">Fechado</option>
+                </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -31,6 +35,7 @@
             <div class="form-group">
                 <label asp-for="DataDeCriacao" class="control-label"></label>
                 <input asp-for="DataDeCriacao" class="form-control" disabled />
+                <input asp-for="DataDeCriacao" class="form-control" hidden />
                 <span asp-validation-for="DataDeCriacao" class="text-danger"></span>
             </div>
             <div class="form-group">
