--- a/Views/ItnServRecs/Create.cshtml
+++ b/Views/ItnServRecs/Create.cshtml
@@ -2,11 +2,12 @@
 
 @{
     ViewData["Title"] = "Create";
+
 }
 
 <h1>Create</h1>
 
-<h4>ItnServRec</h4>
+<h4>ItnServRec </h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,12 +15,13 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="IdOrdRec" class="control-label"></label>
-                <input asp-for="IdOrdRec" class="form-control" />
+                <input asp-for="IdOrdRec" class="form-control"/>
                 <span asp-validation-for="IdOrdRec" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdOrdServ" class="control-label"></label>
-                <input asp-for="IdOrdServ" class="form-control" />
+                <input asp-for="IdOrdServ" class="form-control" disabled/>
+                <input asp-for="IdOrdServ" class="form-control" hidden/>
                 <span asp-validation-for="IdOrdServ" class="text-danger"></span>
             </div>
             <div class="form-group">
