--- a/Views/ItnServRecs/Edit.cshtml
+++ b/Views/ItnServRecs/Edit.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+            <div class="form-group">IdOrdRec
                 <label asp-for="IdOrdRec" class="control-label"></label>
-                <input asp-for="IdOrdRec" class="form-control" />
+                <input asp-for="IdOrdRec" class="form-control" value="IdOrdRec"/>
                 <span asp-validation-for="IdOrdRec" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -36,6 +36,7 @@
             <div class="form-group">
                 <label asp-for="DataDeCriacao" class="control-label"></label>
                 <input asp-for="DataDeCriacao" class="form-control" disabled />
+                <input asp-for="DataDeCriacao" class="form-control" hidden />
                 <span asp-validation-for="DataDeCriacao" class="text-danger"></span>
             </div>
             <div class="form-group">
