--- a/Views/OrdServicoes/Create.cshtml
+++ b/Views/OrdServicoes/Create.cshtml
@@ -29,7 +29,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="FaseAtual" class="control-label"></label>
-                <input asp-for="FaseAtual" class="form-control" />
+                <select asp-for="FaseAtual" class="form-control">
+                    <option value="Inicio">Inicio</option>
+                    <option value="Em andamento">Em andamento</option>
+                    <option value="Concluido">Concluido</option>
+                    <option value="Fechado">Fechado</option>
+                </select>
                 <span asp-validation-for="FaseAtual" class="text-danger"></span>
             </div>
             <div class="form-group">
