--- a/Views/OrdServicoes/Edit.cshtml
+++ b/Views/OrdServicoes/Edit.cshtml
@@ -30,12 +30,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="FaseAtual" class="control-label"></label>
-                <input asp-for="FaseAtual" class="form-control" />
+                <select asp-for="FaseAtual" class="form-control">
+                    <option value="Inicio">Inicio</option>
+                    <option value="Em andamento">Em andamento</option>
+                    <option value="Concluido">Concluido</option>
+                    <option value="Fechado">Fechado</option>
+                </select>
                 <span asp-validation-for="FaseAtual" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DataDeCriacao" class="control-label"></label>
                 <input asp-for="DataDeCriacao" class="form-control" disabled />
+                <input asp-for="DataDeCriacao" class="form-control" hidden />
                 <span asp-validation-for="DataDeCriacao" class="text-danger"></span>
             </div>
             <div class="form-group">
