View Update, Melhor mapeamento 4

--- a/Views/ItnServRecs/Edit.cshtml
+++ b/Views/ItnServRecs/Edit.cshtml
@@ -13,7 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">IdOrdRec
+            <div>
                 <label asp-for="IdOrdRec" class="control-label"></label>
                 <input asp-for="IdOrdRec" class="form-control" value="IdOrdRec"/>
                 <span asp-validation-for="IdOrdRec" class="text-danger"></span>
