--- a/Views/OrdRecebimentoes/Edit.cshtml
+++ b/Views/OrdRecebimentoes/Edit.cshtml
@@ -21,9 +21,9 @@
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
                 <select asp-for="Status" class="form-control">
-                    <option value="Aberto">Aberto</option>
-                    <option value="Em andamento">Em andamento</option>
-                    <option value="Fechado">Fechado</option>
+                    <option value="Recebido">Recebido</option>
+                    <option value="Não Recebido">Não Recebido</option>
+                    <option value="Cancelado">Cancelado</option>
                 </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
