--- a/Views/ItnServRecs/Index.cshtml
+++ b/Views/ItnServRecs/Index.cshtml
@@ -43,10 +43,10 @@
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdOrdRec)
+                <a asp-controller="OrdRecebimentoes" asp-action="Details" asp-route-id="@item.IdOrdRec"> @Html.DisplayFor(modelItem => item.IdOrdRec)</a>
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdOrdServ)
+                <a asp-controller="OrdServicoes" asp-action="Details" asp-route-id="@item.IdOrdServ"> @Html.DisplayFor(modelItem => item.IdOrdServ)</a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Descricao)
