--- a/Views/ItnServRecs/IndexByServicos.cshtml
+++ b/Views/ItnServRecs/IndexByServicos.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "IndexByServicos";
 }
 
-<h1>View</h1>
+<h1>Listas de Itens do serviço</h1>
 <p>
     @foreach (var item in Model)
     {
