--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -4,14 +4,15 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="text-center">
-    <!--<h1 class="display-4">Contato</h1>-->
+    <p>Projeto GitHub : <a href="https://github.com/Sizamux/PI-PortabilidadeWebOkProjetos">/Sizamux/PI-PortabilidadeWebOkProjetos</a></p>
+    <br />
+    <p>Integrante</p>
+    <br />
     <p>Danniele Marini</p>
     <p>Email : dannymarinifox@gmail.com</p>
     <p>Linkedin : <a href="https://www.linkedin.com/in/danniele-marini-5b962597/">/danniele-marini-5b962597</a></p>
-    <p>GitHub : <a href="https://github.com/Sizamux">/Sizamux</a></p>
     <br />
     <p>Keila Campos Soares da Silva</p>
     <p>Email : XxXx@xXxx.com</p>
-    <p>Linkedin : <a href="https://www.linkedin.com/in/XxXxXx-XxxXxX-XxXx/">/keylaXxXx</a></p>
-    <p>GitHub : <a href="https://github.com/XxXxXx">/keylaXxXx</a></p>
+    <p>Linkedin : <a href="https://www.linkedin.com/in/keila-soares-6100b3276/">/keila-soares-6100b3276</a></p>
 </div>
