--- a/Views/ItnServRecs/Create.cshtml
+++ b/Views/ItnServRecs/Create.cshtml
@@ -5,9 +5,9 @@
 
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
-<h4>ItnServRec </h4>
+<h4>Itens de Serviços </h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
