--- a/Views/OrdRecebimentoes/Create.cshtml
+++ b/Views/OrdRecebimentoes/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
-<h4>OrdRecebimento</h4>
+<h4>Nota Fiscal</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
