--- a/Views/OrdRecebimentoes/Index.cshtml
+++ b/Views/OrdRecebimentoes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Todos Itens de Nota Fiscal</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
