--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Sistema Financeiro OkProjetos</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Sistema Financeiro</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="OrdServicoes" asp-action="Index">Serviços</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="OrdRecebimentoes" asp-action="Index">Ordens de Recebimento</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ItnServRecs" asp-action="Index">Todos Itens de Serviços</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ItnServRecs" asp-action="Index">Itens de Serviços</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="OrdRecebimentoes" asp-action="Index">Nota Fiscal</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contato</a>
