View Update e Tema de Bootstrap

--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,18 +1,21 @@
 ﻿@{
-    ViewData["Title"] = "Contato";
+    ViewData["Title"] = "Contatos e Informações";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="display-5">@ViewData["Title"]</h1>
 
 <div class="text-center">
+    <h3 class="display-6">Informações do Projeto</h3>
     <p>Projeto GitHub : <a href="https://github.com/Sizamux/PI-PortabilidadeWebOkProjetos">/Sizamux/PI-PortabilidadeWebOkProjetos</a></p>
     <br />
-    <p>Integrante</p>
-    <br />
-    <p>Danniele Marini</p>
-    <p>Email : dannymarinifox@gmail.com</p>
-    <p>Linkedin : <a href="https://www.linkedin.com/in/danniele-marini-5b962597/">/danniele-marini-5b962597</a></p>
-    <br />
-    <p>Keila Campos Soares da Silva</p>
-    <p>Email : XxXx@xXxx.com</p>
-    <p>Linkedin : <a href="https://www.linkedin.com/in/keila-soares-6100b3276/">/keila-soares-6100b3276</a></p>
+    <h3 class="display-6">Integrante</h3>
+    <p>
+        Danniele Marini
+        <br />Email : dannymarinifox@gmail.com
+        <br />Linkedin : <a href="https://www.linkedin.com/in/danniele-marini-5b962597/">/danniele-marini-5b962597</a>
+    </p>
+    <p>
+        Keila Campos Soares da Silva
+        <br />Email : XxXx@xXxx.com
+        <br />Linkedin : <a href="https://www.linkedin.com/in/keila-soares-6100b3276/">/keila-soares-6100b3276</a>
+    </p>
 </div>
