--- a/Views/ItnServRecs/Edit.cshtml
+++ b/Views/ItnServRecs/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Editar</h1>
+<h1 class="display-5">Editar</h1>
 
 <h4>ItnServRec <input asp-for="Id" disabled /></h4>
 <hr />
