--- a/Views/ItnServRecs/IndexByServicos.cshtml
+++ b/Views/ItnServRecs/IndexByServicos.cshtml
@@ -4,27 +4,25 @@
     ViewData["Title"] = "IndexByServicos";
 }
 
-<h1>Listas de Itens do serviço</h1>
+<h1 class="display-5">Listas de Itens do serviço</h1>
 <p>
     @foreach (var item in Model)
     {
-        <a asp-controller="ItnServRecs" asp-action="Create" asp-route-IdOrdServ="@item.IdOrdServ">Criar Itens</a>
+        <a asp-controller="ItnServRecs" asp-action="Create" asp-route-IdOrdServ="@item.IdOrdServ">Criar Novo Itens</a>
         break;
     }
 </p>
-<table class="table">
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
-                
-                @Html.DisplayNameFor(model => model.IdOrdRec)
+                Id Nota Fiscal
             </th>
             <th>
-                
-                @Html.DisplayNameFor(model => model.IdOrdServ)
+                Id de Serviço
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Descricao)
@@ -38,16 +36,18 @@
             <th>
                 @Html.DisplayNameFor(model => model.UltimaModificacao)
             </th>
-            <th></th>
+            <th>
+                Ações
+            </th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
             <tr>
-                <td>
+                <th>
                     @Html.DisplayFor(modelItem => item.Id)
-                </td>
+                </th>
                 <td>
                     <a asp-controller="OrdRecebimentoes" asp-action="Details" asp-route-id="@item.IdOrdRec"> @Html.DisplayFor(modelItem => item.IdOrdRec)</a>
                 </td>
