--- a/Views/OrdRecebimentoes/Details.cshtml
+++ b/Views/OrdRecebimentoes/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Detelhes</h1>
+<h1 class="display-5">Detelhes</h1>
 
 <div>
     <h4>OrdRecebimento</h4>
