--- a/Views/ItnServRecs/Create.cshtml
+++ b/Views/ItnServRecs/Create.cshtml
@@ -7,17 +7,12 @@
 
 <h1>Criar</h1>
 
-<h4>Itens de Serviços </h4>
+<h4 class="display-5">Itens de Serviços</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="IdOrdRec" class="control-label"></label>
-                <input asp-for="IdOrdRec" class="form-control"/>
-                <span asp-validation-for="IdOrdRec" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="IdOrdServ" class="control-label"></label>
                 <input asp-for="IdOrdServ" class="form-control" disabled/>
