--- a/Views/ItnServRecs/Delete.cshtml
+++ b/Views/ItnServRecs/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Detalhes</h1>
+<h1 class="display-5">Detalhes</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
