--- a/Views/OrdServicoes/Delete.cshtml
+++ b/Views/OrdServicoes/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Deletar</h1>
+<h1 class="display-5">Deletar</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
