--- a/Views/OrdServicoes/Index.cshtml
+++ b/Views/OrdServicoes/Index.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Todos Serviços</h1>
+<h1 class="display-5">Todos Serviços</h1>
 
 <p>
-    <a asp-action="Create">Criar Novo</a>
+    <a asp-action="Create">Criar Novo Serviço</a>
 </p>
-<table class="table">
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>
@@ -33,7 +33,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.UltimaModificacao)
             </th>
-            <th>Ações</th>
+            <th>
+                Ações
+            </th>
         </tr>
     </thead>
     <tbody>
