--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-primary border-bottom box-shadow mb-3" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Sistema Financeiro</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -20,19 +21,19 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="OrdServicoes" asp-action="Index">Serviços</a>
+                            <a class="nav-link" asp-area="" asp-controller="OrdServicoes" asp-action="Index">Serviços</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ItnServRecs" asp-action="Index">Todos Itens de Serviços</a>
+                            <a class="nav-link" asp-area="" asp-controller="ItnServRecs" asp-action="Index">Todos Itens de Serviços</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="OrdRecebimentoes" asp-action="Index">Nota Fiscal</a>
+                            <a class="nav-link" asp-area="" asp-controller="OrdRecebimentoes" asp-action="Index">Nota Fiscal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contato</a>
+                            <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Contact">Contato</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
