--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,8 +3,14 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Sistema Financeiro <link title="OkProjetos" rel="stylesheet" href="http://www.okprojetos.com.br/" /></h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Sistema Financeiro </h1>
+    <p>
+        Sejam bem vindos ao Sistema de controle financeiro desenvolvido para a empresa <a href="http://www.okprojetos.com.br/">OkProjetos</a>
+        <br />Aqui Você pode criar e atualizar dados Serviços relacionado aos projetos,
+        <br />adicionar e manejar diversos itens a cada Serviço,
+        <br />e cadastrar e acompanhar as Notas Fiscais emitidas para empresas.
+    </p>
+    <p>Este Sistema utiliza tecnologia .Net, C#, Identity e EntityFramework</p>
 </div>
 
 
