--- a/Views/OrdServicoes/Delete.cshtml
+++ b/Views/OrdServicoes/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="display-5">Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza de que deseja deletar este registro?</h3>
 <div>
     <h4>OrdServic @Html.DisplayFor(model => model.Id)</h4>
     <hr />
