--- a/Views/ItnServRecs/Index.cshtml
+++ b/Views/ItnServRecs/Index.cshtml
@@ -40,8 +40,13 @@
             <th>
                 @Html.DisplayFor(modelItem => item.Id)
             </th>
-            <td>
-                <a asp-controller="OrdRecebimentoes" asp-action="Details" asp-route-id="@item.IdOrdRec"> @Html.DisplayFor(modelItem => item.IdOrdRec)</a>
+        <td>
+                @if (item.IdOrdRec.HasValue)
+                {
+                    <a asp-controller="OrdRecebimentoes" asp-action="Details" asp-route-id="@item.IdOrdRec"> @Html.DisplayFor(modelItem => item.IdOrdRec)</a>
+                } else {
+                        <a asp-controller="OrdRecebimentoes" asp-action="Create" asp-route-IdFromItmServ="@item.Id"> Gerar Nota Fiscal</a>
+                }
             </td>
             <td>
                 <a asp-controller="OrdServicoes" asp-action="Details" asp-route-id="@item.IdOrdServ"> @Html.DisplayFor(modelItem => item.IdOrdServ)</a>
