--- a/Views/OrdRecebimentoes/Create.cshtml
+++ b/Views/OrdRecebimentoes/Create.cshtml
@@ -20,8 +20,10 @@
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
                 <select asp-for="Status" class="form-control">
+                    <option value="Rascunho">Rascunho</option>
+                    <option value="Agendado">Agendado</option>
+                    <option value="Atrasado">Atrasado</option>
                     <option value="Recebido">Recebido</option>
-                    <option value="Não Recebido">Não Recebido</option>
                     <option value="Cancelado">Cancelado</option>
                 </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
