--- a/Views/ItnServRecs/Edit.cshtml
+++ b/Views/ItnServRecs/Edit.cshtml
@@ -13,14 +13,16 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div>
+            <div class="form-group">
                 <label asp-for="IdOrdRec" class="control-label"></label>
-                <input asp-for="IdOrdRec" class="form-control" value="IdOrdRec"/>
+                <input asp-for="IdOrdRec" class="form-control" disabled />
+                <input asp-for="IdOrdRec" class="form-control" hidden />
                 <span asp-validation-for="IdOrdRec" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdOrdServ" class="control-label"></label>
-                <input asp-for="IdOrdServ" class="form-control" />
+                <input asp-for="IdOrdServ" class="form-control" disabled />
+                <input asp-for="IdOrdServ" class="form-control" hidden />
                 <span asp-validation-for="IdOrdServ" class="text-danger"></span>
             </div>
             <div class="form-group">
