--- a/Views/ItnServRecs/IndexByServicos.cshtml
+++ b/Views/ItnServRecs/IndexByServicos.cshtml
@@ -49,7 +49,14 @@
                     @Html.DisplayFor(modelItem => item.Id)
                 </th>
                 <td>
-                    <a asp-controller="OrdRecebimentoes" asp-action="Details" asp-route-id="@item.IdOrdRec"> @Html.DisplayFor(modelItem => item.IdOrdRec)</a>
+                    @if (item.IdOrdRec.HasValue)
+                    {
+                        <a asp-controller="OrdRecebimentoes" asp-action="Details" asp-route-id="@item.IdOrdRec"> @Html.DisplayFor(modelItem => item.IdOrdRec)</a>
+                    }
+                    else
+                    {
+                        <a asp-controller="OrdRecebimentoes" asp-action="Create" asp-route-IdFromItmServ="@item.Id"> Gerar Nota Fiscal</a>
+                    }
                 </td>
                 <td>
                     <a asp-controller="OrdServicoes" asp-action="Details" asp-route-id="@item.IdOrdServ"> @Html.DisplayFor(modelItem => item.IdOrdServ)</a>
